--- a/project-api/public/template.css
+++ b/project-api/public/template.css
@@ -1,3 +1,59 @@
 body {
     padding-top: 3.5rem;
 }
+
+p {
+    color: rgb(31, 31, 31);
+}
+
+.btn {
+    font-size: 15px;
+    border: 0px;
+    padding: 10px;
+    margin: 3px;    
+}
+
+.btn-primary {
+    background-color: darkcyan;
+}
+
+.btn-primary:hover {
+    background-color: rgb(11, 187, 187);
+}
+
+.btn-secondary {
+    background-color: rgb(0, 88, 139);
+}
+
+.btn-secondary:hover {
+    background-color: rgb(25, 123, 180);
+}
+
+.btn-danger {
+    background-color: brown;
+}
+
+.btn-danger:hover {
+    background-color: rgb(197, 86, 86);
+}
+
+.card{
+    border-width: 0px;
+    background-color:  rgb(233, 236, 239);
+    margin: 30px;
+}
+
+.card .card-body {
+    background-color:  rgb(233, 236, 239);
+    /*border-color: rgb(233, 236, 239);*/
+    /*border-radius: 2px;*/
+    margin: 10px;
+}
+
+
+/*
+.card .bg-primary {
+    background-color: rgb(231, 254, 255);
+    border-color: rgb(132, 190, 192);
+    border-radius: 2px;
+}*/
