--- a/local/template.css
+++ b/local/template.css
@@ -96,5 +96,25 @@ h3 {
 .footer {
     float: bottom;
     position: relative;
+}
 
+#formBox {
+    float: center;
+    /*background-color: rgb(233, 236, 239);*/
+    /*max-width: 650px;
+    min-width: 650px;*/
+    max-height: 500px;
+    min-height: 500px; 
+    margin: auto;
+    width: 70%;
+    border: 3px solid green;
+    padding: 10px;
+    align-content: center;
+    vertical-align: middle;
+
+
+}
+
+#searchResultBox {
+    margin-bottom: 30px;
 }
