[with Martina] main UI [not finished]

--- a/local/template.css
+++ b/local/template.css
@@ -11,6 +11,11 @@ h3 {
     margin: 30px;
 }
 
+.red-line {
+    background-color: #ce132d;
+    border: 3px solid #ce132d;
+}
+
 .btn {
     font-size: 15px;
     border: 0px;
@@ -19,7 +24,7 @@ h3 {
 }
 
 .btn-primary {
-    background-color: darkcyan;
+    background-color: #ce132d;
 }
 
 .btn-primary:hover {
@@ -27,7 +32,8 @@ h3 {
 }
 
 .btn-secondary {
-    background-color: rgb(94, 99, 102);
+    background-color: #dadada;
+    color: black;
 }
 
 .btn-secondary:hover {
@@ -43,13 +49,17 @@ h3 {
 }
 
 .btn-dark{
-    background-color: rgb(52, 58, 64);
+    background-color:#dadada;
     box-shadow: 0px;
     border: 0px;
     font-size: 20px;
-    color: rgb(255, 255, 255);
+    color:black;
     padding-top: 10px;
     padding-bottom: 10px;
+}
+
+.btn-success {
+    background-color: #ce132d;
 }
 
 .card-columns {
@@ -91,11 +101,18 @@ h3 {
 
 .jumbotron {
     padding-bottom: 30px;
+    background-color: #ffffff;
+}
+
+.float-left {
+    margin-right: 30px;
+    margin-bottom: 50px;
 }
 
 .footer {
     float: bottom;
     position: relative;
+    background-color: #cccccc;
 }
 
 #formBox {
@@ -117,4 +134,12 @@ h3 {
 
 #searchResultBox {
     margin-bottom: 30px;
+}
+
+.navbar-dark {
+    background-color: #dadada;
+}
+
+.nav-link {
+    color: black;
 }
