Fixed flyers, modified UI

--- a/local/template.css
+++ b/local/template.css
@@ -124,7 +124,7 @@ h3 {
     min-height: 500px; 
     margin: auto;
     width: 70%;
-    border: 3px solid green;
+    border: 2px solid ce132d;
     padding: 10px;
     align-content: center;
     vertical-align: middle;
