--- a/local/template.css
+++ b/local/template.css
@@ -3,7 +3,7 @@ body {
 }
 
 p {
-    color: rgb(31, 31, 31);
+    color: #242424;
 }
 
 h3 {
@@ -25,27 +25,30 @@ h3 {
 
 .btn-primary {
     background-color: #ce132d;
+    color: #ffffff;
 }
 
 .btn-primary:hover {
-    background-color: rgb(11, 187, 187);
+    background-color: #ec3850;
+    color: #ffffff;
 }
 
 .btn-secondary {
     background-color: #dadada;
-    color: black;
+    color: #000000;
 }
 
 .btn-secondary:hover {
-    background-color: rgb(168, 169, 170);
+    background-color: #eee7e7;
+    color: #000000;
 }
 
 .btn-danger {
-    background-color: brown;
+    background-color: #919191;
 }
 
 .btn-danger:hover {
-    background-color: rgb(197, 86, 86);
+    background-color: #ce132d;
 }
 
 .btn-dark{
@@ -53,25 +56,66 @@ h3 {
     box-shadow: 0px;
     border: 0px;
     font-size: 20px;
-    color:black;
+    color: #000000;
     padding-top: 10px;
     padding-bottom: 10px;
 }
 
+.btn-dark:hover {
+    background-color:#e9e9e9;
+    color: #000000;
+}
+
+.a-btn{
+    background-color:#dadada;
+    box-shadow: 0px;
+    border: 0px;
+    font-size: 20px;
+    color: #000000;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.a-btn:hover {
+    background-color:#e9e9e9;
+    color: #000000;
+}
+
+.btn-little{
+    background-color:#dadada;
+    box-shadow: 0px;
+    border: 0px;
+    font-size: 15px;
+    color: #000000;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.btn-little:hover {
+    background-color:#e9e9e9;
+    color: #000000;
+}
+
 .btn-success {
     background-color: #ce132d;
+    color: #ffffff;
+    font-size: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.btn-success:hover {
+    background-color: #ec3850;
 }
 
 .card-columns {
     columns: auto;
     display: inline-block;
     margin: 0px;
-    
 }
 
 .card {
     border-width: 0px;
-    /*background-color:  rgb(233, 236, 239);*/
     margin: 0px;
     max-width: 350px;
     min-width: 350px;
@@ -83,9 +127,7 @@ h3 {
 }
 
 .card .card-body {
-    background-color:  rgb(233, 236, 239);
-    /*border-color: rgb(233, 236, 239);*/
-    /*border-radius: 2px;*/
+    background-color:  #dadada;
     margin: 10px;
 }
 
@@ -117,9 +159,6 @@ h3 {
 
 #formBox {
     float: center;
-    /*background-color: rgb(233, 236, 239);*/
-    /*max-width: 650px;
-    min-width: 650px;*/
     max-height: 500px;
     min-height: 500px; 
     margin: auto;
@@ -141,5 +180,19 @@ h3 {
 }
 
 .nav-link {
-    color: black;
+    color: #000000;
+}
+
+.see-details{
+    background-color: #ffffff;
+    border: 2px #dadada solid;
+    border-radius: 10px;
+    margin: 40px;
+    padding: 30px;
+}
+
+.see-details-footer{
+    color: #919191;
+    font-size: 15px;
+    padding: 0px;
 }
